--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^7.24.0",
     "express": "^4.17.1",
     "jslint": "^0.12.1",
     "snoowrap": "^1.22.0"
