--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint": "^7.24.0",
     "express": "^4.17.1",
     "jslint": "^0.12.1",
+    "mongoose": "^5.12.4",
     "snoowrap": "^1.22.0"
   },
   "devDependencies": {},
