--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Scrape wall street bets every hour and display the data",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.24.0",
     "express": "^4.17.1",
     "jslint": "^0.12.1",
     "mongoose": "^5.12.4",
     "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.1",
+    "node-iex-cloud": "^2.1.1",
     "nodemon": "^2.0.7",
     "snoowrap": "^1.22.0"
   },
